CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
PROJECT( Oscar )

SET( QT_USE_QTNETWORK TRUE )
SET( QT_USE_QTXML TRUE )
qutim_add_plugin( oscar
	COMPILE_FLAGS "-DLIBOSCAR_LIBRARY"
	DISPLAY_NAME "Oscar protocol"
	DESCRIPTION "Module-based implementation of Oscar protocol"
	GROUP "Protocols"
)
IF( QT_QCONFIG MATCHES "openssl" )
	add_definitions(-DOSCAR_SSL_SUPPORT)
ENDIF( QT_QCONFIG MATCHES "openssl" )

FILE( GLOB PLUGINS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/plugins" "${CMAKE_CURRENT_SOURCE_DIR}/plugins/*" )

FOREACH( PLUGIN ${PLUGINS} )
	IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/plugins/${PLUGIN}" AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/plugins/${PLUGIN}/CMakeLists.txt" )
		ADD_SUBDIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/plugins/${PLUGIN} ${CMAKE_CURRENT_BINARY_DIR}/plugins/${PLUGIN})
	ENDIF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/plugins/${PLUGIN}" AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/plugins/${PLUGIN}/CMakeLists.txt" )
ENDFOREACH( PLUGIN ${PLUGINS} )
