CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
PROJECT( QMLPopups )

SET( QT_USE_QTNETWORK TRUE )
SET( QT_USE_QTSCRIPT TRUE )
SET( QT_USE_QTDECLARATIVE TRUE )
find_package( Qt4 REQUIRED )

if ( ${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_SOURCE_DIR} )
	set(QUTIM_PATH "" CACHE FILEPATH "Path to qutim sources")
	set(QUTIM_BINARY_DIR "" CACHE FILEPATH "Path to qutim build directory")
	set(QUTIM_LIBRARY QUTIM_LIBRARY-NOTFOUND CACHE FILEPATH "Path to qutim library")
endif ( ${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_SOURCE_DIR} )
if( QUTIM_BINARY_DIR )
	set( QUTIM_INCLUDE_DIR ${QUTIM_BINARY_DIR}/libqutim/include )
	set( QUTIM_LIBRARY_DIR ${QUTIM_BINARY_DIR}/libqutim/ )
endif( QUTIM_BINARY_DIR )

LIST (APPEND CMAKE_MODULE_PATH "cmake")
LIST (APPEND CMAKE_MODULE_PATH "${QUTIM_PATH}/cmake")
find_package( QutIM REQUIRED )

qutim_add_plugin( qmlpopups
	DISPLAY_NAME "QML Popups"
	DESCRIPTION "Modern popups, based on power of Qt Quick"
)
